feat(build): support jdk8 spark lineage